--- a/index.html
+++ b/index.html
@@ -1,12 +1,27 @@
-<!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Quiz: Lógica de Programação</title>
+  <link rel="stylesheet" href="./styles/index.css" />
 </head>
 <body>
-    <h1>QUIZ</h1>
-    
+  <div class="container">
+    <h1>Quiz: Lógica de Programação</h1>
+    <h2>console.log("Socorro")</h2>
+    <div class="grupo-dos-botões">
+      <a href="jogo.html" class="botões jogar">
+        🎮 Jogar
+      </a>
+      <a href="ajuda.html" class="botões ajuda">
+        ❓ Ajuda
+      </a>
+    </div>
+    <div class="grupo-dos-botões.central">
+      <a href="sobre" class="botões sobre">
+        ℹ️ Sobre
+      </a>
+    </div>
+  </div>
 </body>
 </html>
