--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
     <h1>Quiz: Lógica de Programação</h1>
     <h2>console.log("Socorro")</h2>
     <div class="grupo-dos-botões">
-      <a href="jogo.html" class="botões jogar">
+      <a href="../quiz/views/jogo.html" class="botões jogar">
         🎮 Jogar
       </a>
-      <a href="ajuda.html" class="botões ajuda">
+      <a href="../quiz/views/ajuda.html" class="botões ajuda">
         ❓ Ajuda
       </a>
     </div>
     <div class="grupo-dos-botões.central">
-      <a href="sobre" class="botões sobre">
+      <a href="../quiz/views/sobre.html" class="botões sobre">
         ℹ️ Sobre
       </a>
     </div>
