--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <a href="../quiz/views/ajuda.html" class="botões ajuda">
         ❓ Ajuda
       </a>
-    </div>
+    </div> v
     <div class="grupo-dos-botões.central">
       <a href="../quiz/views/sobre.html" class="botões sobre">
         ℹ️ Sobre
