--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Quiz: Lógica de Programação</title>
   <link rel="stylesheet" href="./styles/index.css" />
+  <link rel="icon" href="./imagem/favicon.png"  />
 </head>
 <body>
   <div class="container">
